# miniAero

./: .gitmodules  CMakeLists.txt  README.md
kokkos/: CopyGhost.C  GreenGauss.h  Main.C  Makefile  MathToolsDevice.h  Parallel3DMesh.C  Parallel3DMesh.h  README  StencilLimiter.h  TimeSolverExplicitRK4.h
src/: CMakeLists.txt  CopyGhost.C  CopyGhost.h  Faces.h  GreenGauss.h  Main.C  MathToolsDevice.h  MeshData.h  Parallel3DMesh.C  Parallel3DMesh.h  StencilLimiter.h  TimeSolverExplicitRK4.h  YAML_Doc.C
tests/Ramp_Scaling/: generate_inp.sh
tests/tools/: numeric_text_diff
